--- a/src/app/shared/filter/filter.component.scss
+++ b/src/app/shared/filter/filter.component.scss
@@ -4,5 +4,5 @@
     justify-content: center;
     flex-wrap: wrap;
     margin: 50px 0;
-    p-toggleButton { margin: 0 5px; }
+    p-toggleButton { margin: 5px; }
 }
