--- a/src/app/features/maps/maps.component.scss
+++ b/src/app/features/maps/maps.component.scss
@@ -33,6 +33,15 @@
         overflow: hidden;
         margin-right: 40px;
 
+        &_cards {
+            @include tablet {
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+            }
+            
+        }
+
         @include tablet {
             align-items: center;
             justify-content: center;
@@ -140,5 +149,27 @@
             width: 90%;
         }
     }
+}
+
+.search-address {
+    width: 100%;
+
+    &__btn {
+        align-items: center;
+        display: flex;
+
+        input { 
+            margin: 15px 0;
+            width: 70%;
+        }
+    
+        label { 
+            color: var(--primary-200);
+            font-weight: $font-weight-bold;
+        }
+
+        button { margin: 0 5px !important; }
+    }
+    
 }
 
