desenvolvimento em continuidade

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,8 @@
 <main >          
-    <div class = "container-list">
-        <app-header-home></app-header-home>
+    <div class = "container-list">        
+        <p-button class = "button-entrar" label="Entrar" />
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
-        <img [src]="graosHome" alt="Grãos" >         
+        <img [src]="graosHome" alt="Grãos" >                 
     </div>
     <div class="titulo">
         <div class ="titulo_cafezito">
