Estilização da home

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,13 +1,15 @@
-<main >          
+<main > 
+    <header class = "header-home">
+        <p-button label="Entrar" [text] = "true"/>
+    </header>         
     <div class = "container-list">        
-        <p-button class = "button-entrar" label="Entrar" />
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
-        <img [src]="graosHome" alt="Grãos" >                 
+        <img [src]="graosHome" alt="Grãos">                                
     </div>
     <div class="titulo">
         <div class ="titulo_cafezito">
             <h1>CAFEZITO</h1>
-            <img [src]="cafezitoHomeUm" alt="figura1" >
+            <img [src]="cafezitoHomeUm" alt="figura1" >            
             <img [src]="cafezitoHomeDois" alt="figura2" >
         </div>
         <div class="imagens">            
