--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -21,36 +21,53 @@
         width: 50%;
         z-index: 2;
         
-    }
+    }    
+    
 
     img {       
         position: absolute;
-        max-height: 400px;        
-        top: 28%; // Alinha verticalmente ao centro (opcional)
+        max-height: 500px;        
+        top: 33%; // Alinha verticalmente ao centro (opcional)
         right: 0; // Encosta no lado direito
         transform: translateY(-50%); // Centraliza verticalmente
         margin-right: 15rem; // Espaçamento adicional, se necessário
-        filter: opacity(85%);
-    }
-
-    button-entrar { 
-        color: #DAD1C8;
-        float: right;
-        margin-right: 15rem;
-        margin-left: 80rem;
-        top: 3%; 
-        right: 0;
-        transform: translateY(-50%); 
-        justify-content: flex-end;
-
-    }   
-      
+        filter: opacity(85%);        
+        border-radius: 10px;
+        padding: 5px;        
+        }   
         
         
-         @include tablet {
+        @include tablet {
             max-height: 400px;
-          }
-        
-        
+        }
+           
 
+}
+.header-home {
+    background-color: #896A50;
+    position: absolute;
+    top:0;
+    right: 0;    
+}
+.titulo_cafezito{
+    background-color: #DAD1C8;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    top: 0;
+    width: 100%;
+    
+    h1 {
+        color: #896A50;
+        font-size: 70px;
+        font-weight: 500px;
+        letter-spacing: 1px;
+        margin-bottom: 08rem;
+        margin-left: 8px;
+        padding: 40px 100px;
+        position: relative;
+        width: 50%;
+        z-index: 2;
+        
+    }    
 }
