--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,16 +1,17 @@
 <main > 
-    <header class = "header-home">
+    <header class = "header-home">        
         <p-button label="Entrar" [text] = "true"/>
     </header>         
     <div class = "container-list">        
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
         <img [src]="graosHome" alt="Grãos">                                
-    </div>
+    </div>    
+      
     <div class="titulo">
         <div class ="titulo_cafezito">
             <h1>CAFEZITO</h1>
-            <img [src]="cafezitoHomeUm" alt="figura1" >            
-            <img [src]="cafezitoHomeDois" alt="figura2" >
+            <img [src]="cafezitoHomeUm" alt="figura1" col = 2>            
+            <img [src]="cafezitoHomeDois" alt="figura2" col = 3 >
         </div>
         <div class="imagens">            
             <img [src]="cafezitoHomeTres" alt="figura3" >
