--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -10,8 +10,8 @@
     <div class="titulo">
         <div class ="titulo_cafezito">
             <h1>CAFEZITO</h1>
-            <img [src]="cafezitoHomeUm" alt="figura1" col = 2>            
-            <img [src]="cafezitoHomeDois" alt="figura2" col = 3 >
+            <img [src]="cafezitoHomeUm" alt="figura1">            
+            <img [src]="cafezitoHomeDois" alt="figura2">
         </div>
         <div class="imagens">            
             <img [src]="cafezitoHomeTres" alt="figura3" >
