edição da div objetivos

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -5,29 +5,50 @@
     <div class = "container-list">        
         <h1>Descubra, saboreie e compartilhe o melhor café com o Cafezito</h1>
         <img [src]="graosHome" alt="Grãos">                                
-    </div>    
-      
+    </div>        
     <div class="titulo">
         <div class ="titulo_cafezito">
             <h1>CAFEZITO</h1>
-            <img [src]="cafezitoHomeUm" alt="figura1">            
-            <img [src]="cafezitoHomeDois" alt="figura2">
+            <img [src]="cafezitoHomeUm" alt="figura1" style="width:350px " p-6 >
+            <img [src]="cafezitoHomeDois" alt="figura2" style="width:350px">
         </div>
         <div class="imagens">            
             <img [src]="cafezitoHomeTres" alt="figura3" >
             <img [src]="cafezitoHomeQuatro" alt="figura4" >
             <img [src]="cafezitoHomeCinco" alt="figura5" >
         </div>                   
+    </div>    
+    <div class="descricao">
+        <img [src]="placaCoffee" alt="Placa Cafeteria" class="descricao__imagem" />
+        <div class="descricao__texto">
+          <p>
+            O Cafezito é a solução perfeita para os amantes de café e frequentadores
+            de cafeterias que buscam o ambiente ideal para suas necessidades. Em uma
+            cidade rica em opções, muitos enfrentam dificuldades para encontrar o
+            local que mais se adapta ao seu estilo de vida — seja para trabalhar,
+            relaxar ou socializar. Com diversas cafeterias espalhadas pela cidade, a
+            falta de uma plataforma centralizada torna essa busca ainda mais
+            desafiadora.
+          </p>
+        </div>
     </div>
-    <div>
-        <h3>O Cafezito é a solução perfeita para os amantes de café e frequentadores de cafeterias que buscam o ambiente ideal para suas necessidades. Em uma cidade rica em opções, muitos enfrentam dificuldades para encontrar o local que mais se adapta ao seu estilo de vida — seja para trabalhar, relaxar ou socializar. Com diversas cafeterias espalhadas pela cidade, a falta de uma plataforma centralizada torna essa busca ainda mais desafiadora.</h3> 
-        <img [src]="placaCoffee" alt="Placa Cafeteria" >          
-    </div>
-    <div>
-        <h3>Nosso objetivo é resolver as principais dores dos consumidores de café, proporcionando uma experiência rica e personalizada. Com o Cafezito, você encontrará o local perfeito para saborear uma boa xícara de café, seja para um trabalho produtivo ou um momento de lazer. Estamos construindo uma base sólida para o crescimento do aplicativo, sempre com o foco em você, o verdadeiro apreciador de café.</h3> 
-        <h4>Venha conosco e descubra tudo o que Porto Alegre tem a oferecer em cafeterias!</h4>  
-        <img [src]="aguaGas" alt="Café e Agua com Gas" >        
-    </div>
+    <div class="objetivo">        
+        <div class="objetivo_texto">
+          <p>
+            Nosso objetivo é resolver as principais dores dos consumidores de café,
+            proporcionando uma experiência rica e personalizada. Com o Cafezito, você
+            encontrará o local perfeito para saborear uma boa xícara de café, seja
+            para um trabalho produtivo ou um momento de lazer. Estamos construindo
+            uma base sólida para o crescimento do aplicativo, sempre com o foco em
+            você, o verdadeiro apreciador de café.
+          </p>
+          <strong>
+            Venha conosco e descubra tudo o que Porto Alegre tem a oferecer em
+            cafeterias!
+          </strong>
+        </div>
+        <img [src]="aguaGas" alt="Café e Agua com Gas" class="objetivo_imagem" >                                
+    </div>    
     <div>
         <h1>diferenciais</h1>           
     </div> 
