imagem objetivo ajustada

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -47,7 +47,7 @@
             cafeterias!
           </strong>
         </div>
-        <img [src]="aguaGas" alt="Café e Agua com Gas" class="objetivo_imagem" >                                
+        <img [src]="aguaGas" alt="Café e Agua com Gas" class="objetivo_imagem" style="width:600px" >                                
     </div>    
     <div>
         <h1>diferenciais</h1>           
