feat: adicionando header e tab

--- a/src/app/core/scss/theme.scss
+++ b/src/app/core/scss/theme.scss
@@ -4150,19 +4150,19 @@
     scroll-padding-inline: 3rem;
   }
   .p-tabview .p-tabview-nav {
-    background: #ffffff;
-    border: 1px solid #e5e7eb;
+    background: transparent;
+    border: 1px solid var(--primary-200);
     border-width: 0 0 2px 0;
   }
   .p-tabview .p-tabview-nav li {
     margin-right: 0;
   }
   .p-tabview .p-tabview-nav li .p-tabview-nav-link {
-    border: solid #e5e7eb;
+    border: solid var(--primary-100);
     border-width: 0 0 2px 0;
-    border-color: transparent transparent #e5e7eb transparent;
-    background: #ffffff;
-    color: #6b7280;
+    border-color: transparent transparent var(--primary-100) transparent;
+    background: transparent;
+    color: var(--primary-100);
     padding: 1.25rem;
     font-weight: 700;
     border-top-right-radius: 6px;
@@ -4176,12 +4176,12 @@
     box-shadow: inset 0 0 0 0.2rem var(--primary--100);
   }
   .p-tabview .p-tabview-nav li:not(.p-highlight):not(.p-disabled):hover .p-tabview-nav-link {
-    background: #ffffff;
-    border-color: #9ca3af;
-    color: #6b7280;
+    background: transparent;
+    border-color: var(--primary-100);
+    color: var(--primary-100);
   }
   .p-tabview .p-tabview-nav li.p-highlight .p-tabview-nav-link {
-    background: #ffffff;
+    background: transparent;
     border-color: var(--primary-color);
     color: var(--primary-color);
   }
@@ -4195,7 +4195,7 @@
     margin-left: 0.5rem;
   }
   .p-tabview .p-tabview-nav-btn.p-link {
-    background: #ffffff;
+    background: transparent;
     color: var(--primary-color);
     width: 3rem;
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -4207,7 +4207,7 @@
     box-shadow: inset 0 0 0 0.2rem var(--primary--100);
   }
   .p-tabview .p-tabview-panels {
-    background: #ffffff;
+    background:transparent;
     padding: 1.25rem;
     border: 0 none;
     color: #4b5563;
