Desenvolvimento do footer

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -146,10 +146,19 @@
           </div>          
         </div>
       </section>
-          
-    <div class="homem-cafeteria">
-        <h1 class="homem-cafeteria-texto">Pronto para Conhecer o Cafezito</h1>
-        <p-button label="Entrar" class="button"/>
-        <img [src]="homemCafeteria" alt="Homem na cafeteria" class="homem-cafeteria-imagem" style="width: 500px;" >           
-    </div>       
+      <div class="homem-cafeteria">        
+          <h1>Pronto para conhecer o Cafezito?</h1>
+          <button class="btn">Criar conta</button>        
+        <div class="image-container">
+          <div class="circle">
+            <img [src]="homemCafeteria" alt="Imagem de uma cafeteria" >
+          </div>
+        </div>
+      </div>
+      <div class = "logos">
+        <i class="pi pi-facebook"></i>
+        <i class="pi pi-instagram"></i>
+      </div>
+             
+         
 </main>
